samples/_failures_safe/1761226061_8bf2da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_57f91f9e.c: In function ‘main’:
./samples/SAFE/__tmp_57f91f9e.c:163:5: error: expected declaration or statement at end of input
  163 |     }
      |     ^
